Uploaded SC/68D?ASW3 to pdfs

--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -120,53 +120,53 @@ Clarke, J.T., M.C. **Ferguson**, C. Curtice, and J. Harrison. 2015. Biologically
 
 Clarke, J.T., M.C. **Ferguson**, S.R. Okkonen, A.A. Brower, and A.L. Willoughby. 2022. Bowhead whale calf detections in the western Beaufort sea during the open water season, 2012–2019. Arctic Science. https://doi.org/10.1139/as-2021-0020
 
-Clarke, J.T., M.C. **Ferguson**, A.L. Willoughby, and A.A. Brower. 2018. Bowhead whale and beluga distributions, sighting rates, and habitat associations in the western Beaufort Sea, summer and fall 2009-2016, with a retrospective comparison to 1982-1991. Arctic 71(2):115-138. https://www.jstor.org/stable/26478010 
+Clarke, J.T., M.C. **Ferguson**, A.L. Willoughby, and A.A. Brower. 2018. Bowhead whale and beluga distributions, sighting rates, and habitat associations in the western Beaufort Sea, summer and fall 2009-2016, with a retrospective comparison to 1982-1991. Arctic 71(2):115-138. https://doi.org/10.14430/arctic4713
 
-Clarke, J.T., A.S. Kennedy, and M.C. **Ferguson**. 2016. Bowhead and Gray Whale Distributions, Sighting Rates, and Habitat Associations in the Eastern Chukchi Sea, Summer and Fall 2009-2015, with a Retrospective Comparison to 1982-1991. Arctic 69(4):359-377. https://www.jstor.org/stable/24878034  
+Clarke, J.T., A.S. Kennedy, and M.C. **Ferguson**. 2016. Bowhead and Gray Whale Distributions, Sighting Rates, and Habitat Associations in the Eastern Chukchi Sea, Summer and Fall 2009-2015, with a Retrospective Comparison to 1982-1991. Arctic 69(4):359-377. http://dx.doi.org/10.14430/arctic4597  
 
-Douglas, A.B., J. Calambokidis, L.M. Munger, M.S. Soldevilla, M.C. **Ferguson**, A.M. Havron, D.L. Camacho, G.S. Campbell, and J.A. Hildebrand. 2014. Seasonal distribution and abundance of cetaceans off Southern California estimated from CalCOFI cruise data from 2004 to 2008. Fishery Bulletin 112: 197-220. DOI 10.7755/FB.112.2-3.7.  
+Douglas, A.B., J. Calambokidis, L.M. Munger, M.S. Soldevilla, M.C. **Ferguson**, A.M. Havron, D.L. Camacho, G.S. Campbell, and J.A. Hildebrand. 2014. Seasonal distribution and abundance of cetaceans off Southern California estimated from CalCOFI cruise data from 2004 to 2008. Fishery Bulletin 112: 197-220. [pdf](https://spo.nmfs.noaa.gov/sites/default/files/pdf-content/2014/douglas.pdf)  
 
 Druckenmiller, M.L., J.J. Citta, M.C. **Ferguson**, J.T. Clarke, J.C. George, and L. Quakenbush. 2018. Trends in sea ice cover within bowhead whale use areas in the Pacific Arctic. Deep-Sea Research II 152:95-107. https://doi.org/10.1016/j.dsr2.2017.10.017.  
 
-Forney, K.A., M.C. **Ferguson**, E.A. Becker, P.C. Fiedler, J.V. Redfern, J. Barlow, I.L. Vilchis, and L.T. Ballance. 2012. Habitat-based spatial models of cetacean density in the eastern Pacific Ocean. Endangered Species Research 16:113-133.  
+Forney, K.A., M.C. **Ferguson**, E.A. Becker, P.C. Fiedler, J.V. Redfern, J. Barlow, I.L. Vilchis, and L.T. Ballance. 2012. Habitat-based spatial models of cetacean density in the eastern Pacific Ocean. Endangered Species Research 16:113-133. https://www.int-res.com/articles/esr_oa/n016p113.pdf  
 
 Gedamke, J., M. **Ferguson**, J. Harrison, L. Hatch, L. Henderson, M.B. Porter, L. Southall, and S. Van Parijs. 2016. Predicting anthropogenic noise contributions to US waters. p. 341-347 In: Popper, A. N.and Hawkins, A., eds., Effects of noise on aquatic life II.  Berlin, Springer-Verlag.  
 
-George, J.C, R. Stimmelmayr, A, Brower, J. Clarke, M. **Ferguson**, A. Von Duyke, G. Sheffield, K. Stafford, T. Sformo, B. Person, L. Sousa, B. Tudor, and R. Suydam. 2017a. 2016 Health report for the Bering – Chukchi - Beaufort Seas bowhead whales – Preliminary findings. Paper SC/67A/AWMP/10 presented to the IWC Scientific Committee, May 2017.  
+George, J.C, R. Stimmelmayr, A, Brower, J. Clarke, M. **Ferguson**, A. Von Duyke, G. Sheffield, K. Stafford, T. Sformo, B. Person, L. Sousa, B. Tudor, and R. Suydam. 2017a. 2016 Health report for the Bering – Chukchi - Beaufort Seas bowhead whales – Preliminary findings. Paper SC/67A/AWMP/10 presented to the IWC Scientific Committee, May 2017. [pdf](https://github.com/megancatonferguson/MCF_CV/blob/main/pdfs/SC_67A_AWMP_10.pdf) 
 
-Givens GH, M.C. **Ferguson**, J.T. Clarke, A. Willoughby, A. Brower, and R. Suydam. 2020. Abundance of the Eastern Chukchi Sea Stock of Beluga Whales, 2012-2017. Arctic 73(4):485-498. DOI 10.14430/arctic71592.  
+Givens GH, M.C. **Ferguson**, J.T. Clarke, A. Willoughby, A. Brower, and R. Suydam. 2020. Abundance of the Eastern Chukchi Sea Stock of Beluga Whales, 2012-2017. Arctic 73(4):485-498. https://doi.org/10.14430/arctic71592  
 
-Halliday, W.D., N. Le Baron, J.J. Citta, J. Dawson, T. Doniol-Valcroze, M. **Ferguson**, S.H. Ferguson, S. Fortune, L.A. Harwood, M.P. Heide-Jørgensen, E.V. Lea, L. Quakenbush, B.G. Young, D. Yurkowski, and S.J. Insley. 2022. Overlap between bowhead whales (Balaena mysticetus) and vessel traffic in the North American Arctic and implications for conservation and management. Biological Conservation 276: 109820. DOI 10.1016/j.biocon.2022.109820.  
+Halliday, W.D., N. Le Baron, J.J. Citta, J. Dawson, T. Doniol-Valcroze, M. **Ferguson**, S.H. Ferguson, S. Fortune, L.A. Harwood, M.P. Heide-Jørgensen, E.V. Lea, L. Quakenbush, B.G. Young, D. Yurkowski, and S.J. Insley. 2022. Overlap between bowhead whales (Balaena mysticetus) and vessel traffic in the North American Arctic and implications for conservation and management. Biological Conservation 276: 109820. https://doi.org/10.1016/j.biocon.2022.109820
 
 Harrison, J., M. **Ferguson**, J. Gedamke, L. Hatch, B. Southall, and S. Van Parijs. 2016. National Oceanic and Atmospheric Administration’s Cetacean and Sound Mapping Effort: Continuing forward with an integrated ocean noise strategy. p. 409-416 In: Popper, A. N.and Hawkins, A., eds., Effects of noise on aquatic life II.  Berlin, Springer-Verlag.  
 
-Harrison, J., M.C. **Ferguson**, L. New, J. Cleary, C. Curtice, S. DeLand, E. Fujioka, P.N. Halpin, R.B. Tyson Moore, and S.M. Van Parijs. 2023. Biologically Important Areas II for cetaceans within U.S. and adjacent waters – Updates and the application of a new scoring system. Frontiers in Marine Science 10:1081893. DOI 10.3389/fmars.2023.1081893.  
+Harrison, J., M.C. **Ferguson**, L. New, J. Cleary, C. Curtice, S. DeLand, E. Fujioka, P.N. Halpin, R.B. Tyson Moore, and S.M. Van Parijs. 2023. Biologically Important Areas II for cetaceans within U.S. and adjacent waters – Updates and the application of a new scoring system. Frontiers in Marine Science 10:1081893. https://doi.org/10.3389/fmars.2023.1081893  
 
-Joyce, T., M. **Ferguson**, C. Berchok, D. Wright, J. Crance, E. Braen, T. Eguchi, W.L. Perryman, and D. Weller. 2023. The role of sea ice in the distribution, habitat use, and phenology of eastern North Pacific gray whales. Marine Ecology Progress Series 709: 141-158. DOI 10.3354/meps14271.  
+Joyce, T., M. **Ferguson**, C. Berchok, D. Wright, J. Crance, E. Braen, T. Eguchi, W.L. Perryman, and D. Weller. 2023. The role of sea ice in the distribution, habitat use, and phenology of eastern North Pacific gray whales. Marine Ecology Progress Series 709: 141-158. https://www.int-res.com/articles/meps2023/709/m709p141.pdf  
 
-Kuletz, K.J., M.C. **Ferguson**, B. Hurley, A.E. Gall, E.A. Labunski, and T.C. Morgan. 2015. Seasonal spatial patterns in seabird and marine mammal distribution in the eastern Chukchi and western Beaufort seas: Identifying biologically important pelagic areas. Progress in Oceanography. DOI 10.1016/j.pocean.2015.05.012  
+Kuletz, K.J., M.C. **Ferguson**, B. Hurley, A.E. Gall, E.A. Labunski, and T.C. Morgan. 2015. Seasonal spatial patterns in seabird and marine mammal distribution in the eastern Chukchi and western Beaufort seas: Identifying biologically important pelagic areas. Progress in Oceanography. https://doi.org/10.1016/j.pocean.2015.05.012
 
-Laake, J.L., A.E. Punt, R. Hobbs, M. **Ferguson**, D. Rugh, and J. Breiwick. 2012. Gray whale southbound migration surveys 1967-2006: an integrated re-analysis. Journal of Cetacean Research and Management 12(3):287-306.  
+Laake, J.L., A.E. Punt, R. Hobbs, M. **Ferguson**, D. Rugh, and J. Breiwick. 2012. Gray whale southbound migration surveys 1967-2006: an integrated re-analysis. Journal of Cetacean Research and Management 12(3):287-306. https://journal.iwc.int/index.php/jcrm/article/view/559 
 
-Mannocci, L., A.M. Boustany, J.J. Roberts, D.M. Palacios, D.C. Dunn, P.N. Halpin, S. Viehman, J. Moxley, J. Cleary, H. Bailey, S.J. Bograd, E.A. Becker, B. Gardner, J.R. Hartog, E.L. Hazen, M.C. **Ferguson**, K.A. Forney, B.P. Kinlan, M.J. Oliver, C.T. Perretti, V. Ridoux, S.L.H. Teo, and A.J. Winship. 2017. Temporal resolutions in species distribution models of highly mobile marine animals: Recommendations for ecologists and managers. Diversity and Distributions 23:1098-1109. 10.1111/ddi.12609.  
+Mannocci, L., A.M. Boustany, J.J. Roberts, D.M. Palacios, D.C. Dunn, P.N. Halpin, S. Viehman, J. Moxley, J. Cleary, H. Bailey, S.J. Bograd, E.A. Becker, B. Gardner, J.R. Hartog, E.L. Hazen, M.C. **Ferguson**, K.A. Forney, B.P. Kinlan, M.J. Oliver, C.T. Perretti, V. Ridoux, S.L.H. Teo, and A.J. Winship. 2017. Temporal resolutions in species distribution models of highly mobile marine animals: Recommendations for ecologists and managers. Diversity and Distributions 23:1098-1109. https://doi.org/10.1111/ddi.12609  
 
-Mayette, A., M. Marcoux, J. Iacozza, M. **Ferguson**, A. Brower, and L. Loseto. Paper in press. Summer distribution and habitat preference of beluga whale social groups in the Eastern Beaufort Sea. Arctic Science. DOI 10.1139/as-2022-0035.  
+Mayette, A., M. Marcoux, J. Iacozza, M. **Ferguson**, A. Brower, and L. Loseto. Paper in press. Summer distribution and habitat preference of beluga whale social groups in the Eastern Beaufort Sea. Arctic Science. https://doi.org/10.1139/as-2022-0035  
 
-Muto, M.M., V.T. Helker, R.P. Angliss, P.L. Boveng, J.M. Breiwick, M.F. Cameron, P.J. Clapham, S.P. Dahle, M.E. Dahlheim, B.S. Fadely, M.C. **Ferguson**, L.W. Fritz, R.C. Hobbs, Y.V. Ivashchenko, A.S. Kennedy, J.M. London, S.A. Mizroch, R.R. Ream, E.L. Richmond, K.E.W. Shelden, K.L. Sweeney, R.G. Towell, P.R. Wade, J.M. Waite, and A.N. Zerbini. 2019. Alaska marine mammal stock assessments, 2018. U.S. Department of  Commerce, NOAA Tech. Memo. NMFS-AFSC-393, 390 p.  
+Muto, M.M., V.T. Helker, R.P. Angliss, P.L. Boveng, J.M. Breiwick, M.F. Cameron, P.J. Clapham, S.P. Dahle, M.E. Dahlheim, B.S. Fadely, M.C. **Ferguson**, L.W. Fritz, R.C. Hobbs, Y.V. Ivashchenko, A.S. Kennedy, J.M. London, S.A. Mizroch, R.R. Ream, E.L. Richmond, K.E.W. Shelden, K.L. Sweeney, R.G. Towell, P.R. Wade, J.M. Waite, and A.N. Zerbini. 2019. Alaska marine mammal stock assessments, 2018. U.S. Department of  Commerce, NOAA Tech. Memo. NMFS-AFSC-393, 390 p. [pdf](https://repository.library.noaa.gov/view/noaa/20606) 
 
-Muto, M.M., V.T. Helker, R.P. Angliss, B.A. Allen, P.L. Boveng, J.M. Breiwick, M.F. Cameron, P.J., Clapham, S.P Dahle, M.E. Dahlheim, B.S. Fadely, M.C. **Ferguson**, L.W. Fritz, R.C. Hobbs, Y.V. Ivashchenko, A.S. Kennedy, J.M. London, S.A. Mizroch, R.R. Ream, E.L. Richmond, K.E.W. Shelden, R.G. Towell, P.R. Wade, J.M. Waite, and A.N. Zerbini. 2016. Alaska marine mammal stock assessments, 2015. US Department of Commerce, NOAA Technical Memorandum NMFS-AFSC-323, 300 p. doi: 10.7289/V5/TM-AFSC-323.  
+Muto, M.M., V.T. Helker, R.P. Angliss, B.A. Allen, P.L. Boveng, J.M. Breiwick, M.F. Cameron, P.J., Clapham, S.P Dahle, M.E. Dahlheim, B.S. Fadely, M.C. **Ferguson**, L.W. Fritz, R.C. Hobbs, Y.V. Ivashchenko, A.S. Kennedy, J.M. London, S.A. Mizroch, R.R. Ream, E.L. Richmond, K.E.W. Shelden, R.G. Towell, P.R. Wade, J.M. Waite, and A.N. Zerbini. 2016. Alaska marine mammal stock assessments, 2015. US Department of Commerce, NOAA Technical Memorandum NMFS-AFSC-323, 300 p. doi: 10.7289/V5/TM-AFSC-323. [pdf](https://apps-afsc.fisheries.noaa.gov/Publications/AFSC-TM/NOAA-TM-AFSC-323.pdf)  
 
-Muto, M.M., V.T. Helker, R.P. Angliss, B.A. Allen, P.L. Boveng, J.M. Breiwick, M.F. Cameron, P.J., Clapham, S.P Dahle, M.E. Dahlheim, B.S. Fadely, M.C. **Ferguson**, L.W. Fritz, R.C. Hobbs, Y.V. Ivashchenko, A.S. Kennedy, J.M. London, S.A. Mizroch, R.R. Ream, E.L. Richmond, K.E.W. Shelden, R.G. Towell, P.R. Wade, J.M. Waite, and A.N. Zerbini. 2017. Alaska marine mammal stock assessments, 2016. US Department of Commerce, NOAA Technical Memorandum NMFS-AFSC-355, 366 p. doi: 10.7289/V5/TM-AFSC-355.  
+Muto, M.M., V.T. Helker, R.P. Angliss, B.A. Allen, P.L. Boveng, J.M. Breiwick, M.F. Cameron, P.J., Clapham, S.P Dahle, M.E. Dahlheim, B.S. Fadely, M.C. **Ferguson**, L.W. Fritz, R.C. Hobbs, Y.V. Ivashchenko, A.S. Kennedy, J.M. London, S.A. Mizroch, R.R. Ream, E.L. Richmond, K.E.W. Shelden, R.G. Towell, P.R. Wade, J.M. Waite, and A.N. Zerbini. 2017. Alaska marine mammal stock assessments, 2016. US Department of Commerce, NOAA Technical Memorandum NMFS-AFSC-355, 366 p. doi: 10.7289/V5/TM-AFSC-355. [pdf](https://apps-afsc.fisheries.noaa.gov/Publications/AFSC-TM/NOAA-TM-AFSC-355.pdf)  
 
-Muto, M.M., V. T. Helker, R. P. Angliss, B. A. Allen, P. L. Boveng,J. M. Breiwick, M. F. Cameron, P. J. Clapham, S. P. Dahle,M. E. Dahlheim, B. S. Fadely, M.C. **Ferguson**, L. W. Fritz, R. C. Hobbs, Y. V. Ivashchenko, A. S. Kennedy, J. M. London, S. A. Mizroch, R. R. Ream, E. L. Richmond, K. E. W. Shelden, R. G. Towell,P. R. Wade, J.M. Waite, and A.N. Zerbini. 2018. Alaska marine mammal stock assessments, 2017. U.S. Dep. Commer., NOAA Tech. Memo. NMFS-AFSC-378, 382 p.  
+Muto, M.M., V. T. Helker, R. P. Angliss, B. A. Allen, P. L. Boveng,J. M. Breiwick, M. F. Cameron, P. J. Clapham, S. P. Dahle,M. E. Dahlheim, B. S. Fadely, M.C. **Ferguson**, L. W. Fritz, R. C. Hobbs, Y. V. Ivashchenko, A. S. Kennedy, J. M. London, S. A. Mizroch, R. R. Ream, E. L. Richmond, K. E. W. Shelden, R. G. Towell,P. R. Wade, J.M. Waite, and A.N. Zerbini. 2018. Alaska marine mammal stock assessments, 2017. U.S. Dep. Commer., NOAA Tech. Memo. NMFS-AFSC-378, 382 p. [pfd](https://apps-afsc.fisheries.noaa.gov/Publications/AFSC-TM/NOAA-TM-AFSC-378.pdf) 
 
-Muto, M.M., V.T. Helker, B.J. Delean, R.P. Angliss, P.L. Boveng, J.M. Breiwick, B.M. Brost, M.F. Cameron, P.J. Clapham, S.P. Dahle, M.E. Dahlheim, B.S. Fadely, M.C. **Ferguson**, L.W. Fritz, R.C. Hobbs, Y.V. Ivashchenko, A.S. Kennedy, J.M. London, S.A. Mizroch, R.R. Ream, E.L. Richmond, K.E.W. Shelden, K.L. Sweeney, R.G. Towell, P.R. Wade, J.M. Waite, and A.N. Zerbini. 2020. Alaska marine mammal stock assessments, 2019. U.S. Department of Commerce, NOAA Tech. Memo. NMFS-AFSC-404, 395 p.  
+Muto, M.M., V.T. Helker, B.J. Delean, R.P. Angliss, P.L. Boveng, J.M. Breiwick, B.M. Brost, M.F. Cameron, P.J. Clapham, S.P. Dahle, M.E. Dahlheim, B.S. Fadely, M.C. **Ferguson**, L.W. Fritz, R.C. Hobbs, Y.V. Ivashchenko, A.S. Kennedy, J.M. London, S.A. Mizroch, R.R. Ream, E.L. Richmond, K.E.W. Shelden, K.L. Sweeney, R.G. Towell, P.R. Wade, J.M. Waite, and A.N. Zerbini. 2020. Alaska marine mammal stock assessments, 2019. U.S. Department of Commerce, NOAA Tech. Memo. NMFS-AFSC-404, 395 p. [pdf](https://repository.library.noaa.gov/view/noaa/25642) 
 
-Muto, M.M., V.T. Helker, B.J. Delean, N.C. Young, J.C. Freed, R.P. Angliss, N.A. Friday, P.L. Boveng, J.M. Breiwick, B.M. Brost, M.F. Cameron, P.J. Clapham, J.L. Crance, S.P. Dahle, M.E. Dahlheim, B.S. Fadely, M.C. **Ferguson**, L.W. Fritz, K.T. Goetz, R.C. Hobbs, Y.V. Ivashchenko, A.S. Kennedy, J.M. London, S.A. Mizroch, R.R. Ream, E.L. Richmond, K.E.W. Shelden, K.L. Sweeney, R.G. Towell, P.R. Wade, J.M. Waite, and A.N. Zerbini. 2021. Alaska marine mammal stock assessments, 2020. U.S. Dep. Commer., NOAA Tech. Memo. NMFS-AFSC-421, 398 p.  
+Muto, M.M., V.T. Helker, B.J. Delean, N.C. Young, J.C. Freed, R.P. Angliss, N.A. Friday, P.L. Boveng, J.M. Breiwick, B.M. Brost, M.F. Cameron, P.J. Clapham, J.L. Crance, S.P. Dahle, M.E. Dahlheim, B.S. Fadely, M.C. **Ferguson**, L.W. Fritz, K.T. Goetz, R.C. Hobbs, Y.V. Ivashchenko, A.S. Kennedy, J.M. London, S.A. Mizroch, R.R. Ream, E.L. Richmond, K.E.W. Shelden, K.L. Sweeney, R.G. Towell, P.R. Wade, J.M. Waite, and A.N. Zerbini. 2021. Alaska marine mammal stock assessments, 2020. U.S. Dep. Commer., NOAA Tech. Memo. NMFS-AFSC-421, 398 p. [pdf](https://repository.library.noaa.gov/view/noaa/31437) 
 
-Soldevilla, M.S., S.M. Wiggins, J.A. Hildebrand, E.M. Oleson, and M.C. **Ferguson**. 2011. Risso’s and Pacific white-sided dolphin habitat modeling from passive acoustic monitoring. Marine Ecology Progress Series 423: 247-260.  
+Soldevilla, M.S., S.M. Wiggins, J.A. Hildebrand, E.M. Oleson, and M.C. **Ferguson**. 2011. Risso’s and Pacific white-sided dolphin habitat modeling from passive acoustic monitoring. Marine Ecology Progress Series 423: 247-260. https://doi.org/10.3354/meps08927  
 
-Stafford, K. M., E.V. Farley, M. **Ferguson**, K.J. Kuletz, and R. Levine. 2022. Northward Range Expansion of Subarctic Upper Trophic Level Animals into the Pacific Arctic Region. Oceanography. DOI 10.5670/oceanog.2022.101.  
+Stafford, K. M., E.V. Farley, M. **Ferguson**, K.J. Kuletz, and R. Levine. 2022. Northward Range Expansion of Subarctic Upper Trophic Level Animals into the Pacific Arctic Region. Oceanography. https://doi.org/10.5670/oceanog.2022.101
 
 Stafford, K.M., M.C. **Ferguson**, D.D.W. Hauser, S.R. Okkonen, C.L. Berchok, J.J. Citta, J.T. Clarke, E.C. Garland, J. Jones, and R.S. Suydam. 2016. Beluga whales in the western Beaufort Sea: Current state of knowledge on timing, distribution, habitat use and environmental drivers. Deep Sea Research II: Topical Studies in Oceanography 152: 182-194. DOI 10.1016/j.dsr2.2016.11.017.  
 
