Completed links to all pdfs. Need to review.

--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -168,20 +168,20 @@ Soldevilla, M.S., S.M. Wiggins, J.A. Hildebrand, E.M. Oleson, and M.C. **Ferguso
 
 Stafford, K. M., E.V. Farley, M. **Ferguson**, K.J. Kuletz, and R. Levine. 2022. Northward Range Expansion of Subarctic Upper Trophic Level Animals into the Pacific Arctic Region. Oceanography. https://doi.org/10.5670/oceanog.2022.101
 
-Stafford, K.M., M.C. **Ferguson**, D.D.W. Hauser, S.R. Okkonen, C.L. Berchok, J.J. Citta, J.T. Clarke, E.C. Garland, J. Jones, and R.S. Suydam. 2016. Beluga whales in the western Beaufort Sea: Current state of knowledge on timing, distribution, habitat use and environmental drivers. Deep Sea Research II: Topical Studies in Oceanography 152: 182-194. DOI 10.1016/j.dsr2.2016.11.017.  
+Stafford, K.M., M.C. **Ferguson**, D.D.W. Hauser, S.R. Okkonen, C.L. Berchok, J.J. Citta, J.T. Clarke, E.C. Garland, J. Jones, and R.S. Suydam. 2016. Beluga whales in the western Beaufort Sea: Current state of knowledge on timing, distribution, habitat use and environmental drivers. Deep Sea Research II: Topical Studies in Oceanography 152: 182-194. https://doi.org/10.1016/j.dsr2.2016.11.017  
 
-Stimmelmayr, R., J. Citta, K. Scheimreif, M. **Ferguson**, G.H. Givens, A. Willoughby, A. Brower, A. Von Duyke, G. Sheffield, B. Person, T. Sformo, L. de Sousa and R. Suydam. 2022. 2020-2021 Health Report for the Bering-Chukchi-Beaufort Seas Bowhead Whale. Paper SC/68d/ASW/03 presented to the International Whaling Commission Scientific Committee, May 2022.  
+Stimmelmayr, R., J. Citta, K. Scheimreif, M. **Ferguson**, G.H. Givens, A. Willoughby, A. Brower, A. Von Duyke, G. Sheffield, B. Person, T. Sformo, L. de Sousa and R. Suydam. 2022. 2020-2021 Health Report for the Bering-Chukchi-Beaufort Seas Bowhead Whale. Paper SC/68d/ASW/03 presented to the International Whaling Commission Scientific Committee, May 2022. [pdf](https://github.com/megancatonferguson/MCF_CV/blob/main/pdfs/SC_68D_ASW_03.pdf)  
 
-Stimmelmayr, R., J.C. George, J. Clarke, M. **Ferguson**, A. Willoughby, A. Brower, G. Sheffield, K. Stafford, G. Givens, A. Von Duyke, T. Sformo, B. Person, L. Sousa, and R. Suydam. 2020. 2018-2019 health report for the Bering-Chukchi-Beaufort Seas bowhead whales – preliminary findings. Paper SC/68b/ASW/03 presented to the International Whaling Commission Scientific Committee, May 2020.  
+Stimmelmayr, R., J.C. George, J. Clarke, M. **Ferguson**, A. Willoughby, A. Brower, G. Sheffield, K. Stafford, G. Givens, A. Von Duyke, T. Sformo, B. Person, L. Sousa, and R. Suydam. 2020. 2018-2019 health report for the Bering-Chukchi-Beaufort Seas bowhead whales – preliminary findings. Paper SC/68b/ASW/03 presented to the International Whaling Commission Scientific Committee, May 2020. [pdf](https://github.com/megancatonferguson/MCF_CV/blob/main/pdfs/SC_68B_ASW_03.pdf)  
 
-Stimmelmayr, R., J.C. George, A. Willoughby, A. Brower, J. Clarke, M. **Ferguson**, G. Sheffield, K. Stafford, A. Von Duyke, T. Sformo, B. Person, L. Sousa, and R. Suydam. 2018. 2017 health report for the Bering-Chukchi-Beaufort Seas bowhead whales – preliminary findings. Paper SC/67b/AWMP/08 presented to the IWC Scientific Committee, May 2018.  
+Stimmelmayr, R., J.C. George, A. Willoughby, A. Brower, J. Clarke, M. **Ferguson**, G. Sheffield, K. Stafford, A. Von Duyke, T. Sformo, B. Person, L. Sousa, and R. Suydam. 2018. 2017 health report for the Bering-Chukchi-Beaufort Seas bowhead whales – preliminary findings. Paper SC/67b/AWMP/08 presented to the IWC Scientific Committee, May 2018. [pdf](https://github.com/megancatonferguson/MCF_CV/blob/main/pdfs/SC_67B_AWMP_08.pdf)  
 
-Willoughby, A.L., M.C. **Ferguson**, J.T. Clarke, and A.A. Brower. 2018. First photographic match of an anomalously white gray whale (Eschrichtius robustus) in the northeastern Chukchi Sea, Alaska, and Baja California, Mexico. Aquatic Mammals 44(1): 7-12.  
+Willoughby, A.L., M.C. **Ferguson**, J.T. Clarke, and A.A. Brower. 2018. First photographic match of an anomalously white gray whale (Eschrichtius robustus) in the northeastern Chukchi Sea, Alaska, and Baja California, Mexico. Aquatic Mammals 44(1): 7-12. https://doi.org/10.1578/AM.44.1.2018.7 
 
-Willoughby, A., M. **Ferguson**, B. Hou, C. Accardo, A. Rotrock, A. Brower, J. Clarke, S. Hanlan, M. Foster Doremus, K. Pagan, and L. Barry. 2021. Belly Port Camera Imagery Collected to Address Cetacean Perception Bias During Aerial Line-Transect Surveys: Methods and Sighting Summaries. U.S. Dep. Commer., NOAA Tech. Memo. NMFS-AFSC-427, 111 p.  
+Willoughby, A., M. **Ferguson**, B. Hou, C. Accardo, A. Rotrock, A. Brower, J. Clarke, S. Hanlan, M. Foster Doremus, K. Pagan, and L. Barry. 2021. Belly Port Camera Imagery Collected to Address Cetacean Perception Bias During Aerial Line-Transect Surveys: Methods and Sighting Summaries. U.S. Dep. Commer., NOAA Tech. Memo. NMFS-AFSC-427, 111 p. [pdf](https://repository.library.noaa.gov/view/noaa/32992)
 
-Willoughby, A.L., M.C. **Ferguson**, R. Stimmelmayr, and A.A. Brower. 2022. Bowhead whale (Balaena mysticetus) carcasses documented during the 2019 aerial surveys in the eastern Chukchi and western Beaufort seas: a follow-up to evidence of bowhead whale and killer whale (Orcinus orca) co-occurrence during 2009–2018. Polar Biology. DOI 10.1007/s00300-022-03097-2.  
+Willoughby, A.L., M.C. **Ferguson**, R. Stimmelmayr, and A.A. Brower. 2022. Bowhead whale (Balaena mysticetus) carcasses documented during the 2019 aerial surveys in the eastern Chukchi and western Beaufort seas: a follow-up to evidence of bowhead whale and killer whale (Orcinus orca) co-occurrence during 2009–2018. Polar Biology. [pdf](https://repository.library.noaa.gov/view/noaa/47896) 
 
-Willoughby, A.L., M.C. **Ferguson**, R. Stimmelmayr, J.T. Clarke, and A.A. Brower. 2020. Bowhead whale (Balaena mysticetus) and killer whale (Orcinus orca) co-occurrence in the U.S. Pacific Arctic, 2009-2018: evidence from bowhead whale carcasses. Polar Biology 43(11): 1669-1679. DOI 10.1007/s00300-020-02734-y.  
+Willoughby, A.L., M.C. **Ferguson**, R. Stimmelmayr, J.T. Clarke, and A.A. Brower. 2020. Bowhead whale (Balaena mysticetus) and killer whale (Orcinus orca) co-occurrence in the U.S. Pacific Arctic, 2009-2018: evidence from bowhead whale carcasses. Polar Biology 43(11): 1669-1679. https://doi.org/10.1007/s00300-020-02734-y  
 
-Willoughby, A. L., R. Stimmelmayr, A.A. Brower, J.T. Clarke, and M.C. **Ferguson**. 2022. Gray whale (Eschrichtius robustus) and killer whale (Orcinus orca) co-occurrence in the eastern Chukchi Sea, 2009–2019: evidence from gray whale carcasses observed during aerial surveys. Polar Biology 45:737-748. DOI 10.1007/s00300-022-03015-6.  
+Willoughby, A. L., R. Stimmelmayr, A.A. Brower, J.T. Clarke, and M.C. **Ferguson**. 2022. Gray whale (Eschrichtius robustus) and killer whale (Orcinus orca) co-occurrence in the eastern Chukchi Sea, 2009–2019: evidence from gray whale carcasses observed during aerial surveys. Polar Biology 45:737-748. DOI https://doi.org/10.1007/s00300-022-03015-6 
