Committing final? draft of web CV.

--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -164,6 +164,8 @@ Muto, M.M., V.T. Helker, B.J. Delean, R.P. Angliss, P.L. Boveng, J.M. Breiwick, 
 
 Muto, M.M., V.T. Helker, B.J. Delean, N.C. Young, J.C. Freed, R.P. Angliss, N.A. Friday, P.L. Boveng, J.M. Breiwick, B.M. Brost, M.F. Cameron, P.J. Clapham, J.L. Crance, S.P. Dahle, M.E. Dahlheim, B.S. Fadely, M.C. **Ferguson**, L.W. Fritz, K.T. Goetz, R.C. Hobbs, Y.V. Ivashchenko, A.S. Kennedy, J.M. London, S.A. Mizroch, R.R. Ream, E.L. Richmond, K.E.W. Shelden, K.L. Sweeney, R.G. Towell, P.R. Wade, J.M. Waite, and A.N. Zerbini. 2021. Alaska marine mammal stock assessments, 2020. U.S. Dep. Commer., NOAA Tech. Memo. NMFS-AFSC-421, 398 p. [pdf](https://repository.library.noaa.gov/view/noaa/31437) 
 
+Muto, M.M., V.T. Helker, B.J. Delean, N.C. Young, J.C. Freed, R.P. Angliss, N.A. Friday, P.L. Boveng, J.M. Breiwick, B.M. Brost, M.F. Cameron, P.J. Clapham, J.L. Crance, S.P. Dahle, M.E. Dahlheim, B.S. Fadely, M.C. **Ferguson**, L.W. Fritz, K.T. Goetz, R.C. Hobbs, Y.V. Ivashchenko, A.S. Kennedy, J.M. London, S.A. Mizroch, R.R. Ream, E.L. Richmond, K.E.W. Shelden, K.L. Sweeney, R.G. Towell, P.R. Wade, J.M. Waite, and A.N. Zerbini. 2022. Alaska marine mammal stock assessments, 2021. U.S. Dep. Commer., NOAA Tech. Memo. NMFS-AFSC-441, 295 p. [pdf](https://repository.library.noaa.gov/view/noaa/44633)
+
 Soldevilla, M.S., S.M. Wiggins, J.A. Hildebrand, E.M. Oleson, and M.C. **Ferguson**. 2011. Risso’s and Pacific white-sided dolphin habitat modeling from passive acoustic monitoring. Marine Ecology Progress Series 423: 247-260. https://doi.org/10.3354/meps08927  
 
 Stafford, K. M., E.V. Farley, M. **Ferguson**, K.J. Kuletz, and R. Levine. 2022. Northward Range Expansion of Subarctic Upper Trophic Level Animals into the Pacific Arctic Region. Oceanography. https://doi.org/10.5670/oceanog.2022.101
